[tool.poetry]
name = "auth"
version = "0.1.0"
description = ""
authors = ["Andrey Chiz <achizhov_job@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.0"
pydantic-settings = "^2.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
