[tool.poetry]
name = "auth"
version = "0.1.0"
description = ""
authors = ["Andrey Chiz <achizhov_job@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.0"
pydantic-settings = "^2.2.1"
alembic = "^1.13.1"
asyncpg = "^0.29.0"
email-validator = "^2.1.1"
bcrypt = "^4.1.2"
uvicorn = "^0.29.0"
ipykernel = "^6.29.3"
python-jose = "^3.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
